--- a/_casestudies/jumbohome.html
+++ b/_casestudies/jumbohome.html
@@ -39,7 +39,7 @@ warning:
     </div>
     <figure>
         <img src="{{site.baseurl}}/assets/img/JumboHome01.png" alt="Research">
-        <figcaption>Inspirational content from Target, Ikea and La Redoute.<figcaption>
+        <figcaption>Inspirational content from Target, Ikea and La Redoute.</figcaption>
     </figure>
 </section>
 
