case details not working

--- a/_casestudies/jumbohome.html
+++ b/_casestudies/jumbohome.html
@@ -11,40 +11,40 @@ description: "Jumbo Home is a section within jumbo website where are showcased t
 warning: 
 ---
 
-<section>
-    <div>
+<section class="section-wrapper">
+    <div class="block">
         <h2>The Problem</h2>
         <p>Jumbo product directory is all mixed up and home department products were spread between a lot of categories on the website. There was a  printed home catalog coming out every year and people wouldn’t be able to find this home collections on the website, which meant a very small amount of sales of this kind of products trought the website.</p>
         <p>There were a lot to technical restrictions since the website is build using an intricate and old technology. </p>
     </div>
-    <div>
+    <div class="block">
         <h2>Goal</h2>
         <p>The goal was to make home products easier to locate on the website and increase the sales of this kid of products throught this channel. It was expected to work as a digital and functional compliment of the printed home catalog.  </p>
     </div>
 </section>
 
-<section>
-    <div>
+<section class="section-wrapper">
+    <div class="block">
         <h2>Research</h2>
         <p>Jumbo product directory is all mixed up and home department products were spread between a lot of categories on the website. There was a  printed home catalog coming out every year and people wouldn’t be able to find this home collections on the website, which meant a very small amount of sales of this kind of products trought the website.</p>
         <p>There were a lot to technical restrictions since the website is build using an intricate and old technology. </p>
+        <div>
+            <h3>Key Finds</h3>
+            <ul>
+                <li>Most Home decor sellers take an inspirational aproach (inspirational images and decor tips);</li>
+                <li>Products categorized by room;</li>
+                <li>Mainly two ways to search: trend and room;</li>
+            </ul>
+        </div>
     </div>
-    <div>
-        <h3>Key Finds</h3>
-        <ul>
-            <li>Most Home decor sellers take an inspirational aproach (inspirational images and decor tips);</li>
-            <li>Products categorized by room;</li>
-            <li>Mainly two ways to search: trend and room;</li>
-        </ul>
-    </div>
-    <figure>
+    <figure class="block">
         <img src="{{site.baseurl}}/assets/img/JumboHome01.png" alt="Research">
         <figcaption>Inspirational content from Target, Ikea and La Redoute.</figcaption>
     </figure>
 </section>
 
-<section>
-    <div>
+<section class="section-wrapper">
+    <div class="block">
         <h2>Solution</h2>
         <p>We created a separate area for all the home products and collections on the website. This new area looked like an independent space within the website where we could easily browse trough an index of all the home sub-categories of products and also view the seasonal campaigns in an inspirational way, taking ideas, interacting with the images and easily navigating to the product page where it would be possible to add it to the shopping cart.</p>
         <div>
@@ -62,7 +62,7 @@ warning:
         </div>
         <div>
             <h3>Visual Design</h3>
-            <h4>Jumbo Home Homepage</h4>
+            <h4>Jumbo Home Homepage:</h4>
             <ul>
                 <li><h5>Campaign highlight banner</h5>
                     <p>This banner would disappear whenever there are no ongoing campaigns. From here is possible to access the campaign catalog details.</p>
@@ -85,16 +85,6 @@ warning:
                 <figure>
                     <img src="{{site.baseurl}}/assets/img/JumboHome04.png" alt="Sketching">
                 </figure>
-            </div>
-            <div>
-                <div>
-                    <h5>Campaign Page</h5>
-                    <p>Each campaign is divided in various collection. Those can be accessed from this page. From here, it’s also possible to access the products within the campaign by category.</p>
-                </div>
-                <div>
-                    <h5>Collection Detail</h5>
-                    <p>This page showcases every collection within the present campaign. It uses the inspirational imagens and ocasional highlighted products. The images have hotspots which, when clicked trigger a pop up with the details of the product and the possibility to add it to the basket.</p>
-                </div>
             </div>
         </div>
     </div>
