--- a/_casestudies/fbaul.html
+++ b/_casestudies/fbaul.html
@@ -13,19 +13,19 @@ warning:
 
 ---
 
-<section>
+<section class="section-wrapper">
     <h2>Research</h2>
     <p>We started by trying to understand the relationship between FBAUL and it’s Alumni focusing on how does the school help it’s former students to transition to the professional world and how does their relationship evolves from here.</p>
     <p>After making some research, inquires, and interviewing some Alumni we got to understand that there is no structures within the school to involve the students once they finish their courses. So, there is no relationship afterwards witch leads to the Alumni feeling “abandoned” and on their own trying to navigate te world after finishing School.</p>     
     <p>From all the benchmark we collected, we were able to understand that a lot of schools have dedicated areas to the Alumni on their websites and facilitate activities and events with this group of people in mind, encouraging the continuity of the relationship.</p>    
-    <div>
+    <div class="block">
         <h3>Benchmark</h3>
         <p>The team analysed 28 websites form schools and universities around the world to understand how the Alumni is addressed on those websites. None of the Portuguese art schools analysed have a Alumni dedicated area. This tendency is revealed mainly in the foreign universities where it’s easy to understand a strong Alumni culture.</p>
         <figure>
             <img src="{{site.baseurl}}/assets/img/FBAUL01.png" alt="Research">
         </figure>
     </div>
-    <div>
+    <div class="block">
         <h3>Surveys and Interviews</h3>
         <p>There were conducted some online surveys and interviews which aimed to understand how is the current relationship between FBAUL and its Alumni and how does the website answer to their needs. From those, the group got to understand that alumni stoped using FBAUL’s website from the moment they’ve finished their studies. Even though there is no relationship after this point, alumni show the will to contribute to the community by sharing knowledge with the current students (78% of the inquired). This group also see the value on creating a networking system to keep all the students connected during and after the school years. From the interviews we gathered that people found the website aesthetically appealing but difficult to navigate.</p>
         <ul>
@@ -43,7 +43,7 @@ warning:
             </li>
         </ul>
     </div>
-    <div>
+    <div class="block">
         <h3>Journey Map</h3>
         <p>Building a journey map helped us understand the critical points on the journey of a student. We identified the search of the first job as one of the most important and emotional parts of this path. This is when and where everything stops being all fun and games and becomes real. That’s why we choose this problem to tackle. </p>
         <p>After identifying this, we went once back to the FBAUL website, trying to understand how is the school helping in finding a job and how easy is for a former student to get this help from the school website.</p>
@@ -52,12 +52,12 @@ warning:
             <img src="{{site.baseurl}}/assets/img/FBAUL02.jpg" alt="Journey Map">
         </figure>
     </div>
-    <div>
+    <div class="block">
         <h3>User analysis</h3>
         <p>Building a journey map helped us understand the critical points on the journey of a student. We identified the search of the first job as one of the most important and emotional parts of this path. This is when and where everything stops being all fun and games and becomes real. That’s why we choose this problem to tackle.</p>
         <p>After identifying this, we went once back to the FBAUL website, trying to understand how is the school helping in finding a job and how easy is for a former student to get this help from the school website.</p> 
     </div>
-    <div>
+    <div class="block">
         <ul>
             <li>
                 <figure>
@@ -92,33 +92,33 @@ warning:
         </ul>
     </div>   
 </section>
-<section>
+<section class="section-wrapper">
     <h1>How might we use the School website to build a relationship between FBAUL and its Alumni and help them navigate the world after finishing school?</h1>
 </section>
-<section>
+<section class="section-wrapper">
     <h2>Solution</h2>
     <p>The proposal consists on creating an Alumni dedicated area on the website. This space must contemplate a variety of useful materials and informations which could be used by Alumni when navigating the world after school. It would also contemplate a private area which would work as a social platform where Alumni could interact with each other, showcase their work and apply to job offers. The Alumni webpage would be a mean to start creating the Alumni culture, encouraging people to feel proud of this exclusive community. So, the job board would be exclusive to FBAUL students allowing partnerships between the school and the companies who value FBAUL’s education.</p>    
-    <div>
+    <div class="block">
         <h3>User Flow</h3>
         <p>This user flow illustrates the main task identified by the student journey map: Apply to a job offer.</p>
         <figure>
             <img src="{{site.baseurl}}/assets/img/FBAUL06.png" alt="User Flow">
         </figure>
     </div>
-    <div>
+    <div class="block">
         <h3>Sketching</h3>
         <p>We started the visual part of the process by making some paper sketching, for a rapid validation of the ideas and the flow of the website.</p>
         <figure>
             <img src="{{site.baseurl}}/assets/img/FBAUL07.png" alt="User Flow">
         </figure>
     </div>
-    <div>
+    <div class="block">
         <h3>Wireframing</h3>
         <figure>
             <img src="{{site.baseurl}}/assets/img/FBAUL08.png" alt="User Flow">
         </figure>
     </div>
-    <div>
+    <div class="block">
         <h3>Visual Design</h3>
         <p>For the visual design, we tried to respect the pre-existent styles on the school website. The goal was to make users feels like they are still inside FBAUL’s website even though they find themselves in a less institutional and more relatable area. To accomplish this, there were used expressive photographs of the statues one can find along FBAUL corridors to illustrate the contents. </p>
         <figure>
@@ -126,12 +126,12 @@ warning:
         </figure>
     </div>
 </section>
-<section>
+<section class="section-wrapper" >
     <h2>User Testing</h2>
     <p>After designing all the process, there were conducted 5 user tests to validate the design and usability decisions.</p>
     <p>The participants were Alumni currently looking for a first job or Alumni which have been in this position before. There were 5 participants in total, from which 3 where female. The ages of most os the participants were between 21 and 30 years old and there was one user between 31 and 40 years old and one user between 41 and 50 years old.</p>
     <p>The tests made us realize the solution was not yet perfect. There were some aspects to be revised for security reasons and some others which might find technical obstacles. </p>
-    <div>
+    <div class="block">
         <div>
             <div>
                 <h5>Tasks</h5>
@@ -156,14 +156,14 @@ warning:
             <figcaption>Lookback was the tool used during the user testing.</figcaption>
         </figure>
     </div>
-    <div>
+    <div class="block">
         <h3>Conclusions and Learnings</h3>
         <p>All the tested users recognised value in creating a new Alumni area within FBAUL’s website. This area is easy to identify and the job application process is seen as a positive and convenient tool.</p>
         <p>Despite this, users found that some other features would increase the value of the proposal. Such as the possibility to add social links to the profile and the existence of more options to import data from other platforms.</p>
         <p>Users also found some usability faults and suggested the possibility to validate the information which will be sent to the company when applying to a job and giving the user the possibility to cancel the application within the first 10 seconds after applying. This would give the user control over the final decision.</p>
     </div>
 </section>
-<section>
+<section class="section-wrapper">
     <h2>Next Steps</h2>
     <ul>
         <li>Design mobile versions;</li>
