--- a/_casestudies/jumbohome.html
+++ b/_casestudies/jumbohome.html
@@ -60,32 +60,32 @@ warning:
                 <figcaption>Closest sketches to the final solution.</figcaption>
             </figure>
         </div>
+    </div>
+    <div class="block">
+        <h2>Visual Design</h2>
+        <p><strong>Jumbo Home Homepage:</strong></p>
+        <ul>
+            <li><h5>Campaign highlight banner</h5>
+                <p>This banner would disappear whenever there are no ongoing campaigns. From here is possible to access the campaign catalog details.</p>
+            </li>
+            <li><h5>Categories - Organised by room</h5>
+                <p>This is a dynamic grid to allow the introducing or elimination of new categories.
+                </p>
+            </li>
+            <li><h5>Blog Slider</h5>
+               <p>This slider links to all home related articles published at Jumbo Moda Blog</p>
+            </li>
+            <li><h5>Decor Tips</h5>
+                <p>This slider links to all home related articles published at Jumbo Moda Blog</p>
+            </li>
+            <li><h5>Catalog Archive</h5>
+               <p>Every campaign catalog is stored in this section where the user can always access older catalogs and campaigns</p>
+            </li>
+        </ul>
         <div>
-            <h3>Visual Design</h3>
-            <h4>Jumbo Home Homepage:</h4>
-            <ul>
-                <li><h5>Campaign highlight banner</h5>
-                    <p>This banner would disappear whenever there are no ongoing campaigns. From here is possible to access the campaign catalog details.</p>
-                </li>
-                <li><h5>Categories - Organised by room</h5>
-                    <p>This is a dynamic grid to allow the introducing or elimination of new categories.
-                    </p>
-                </li>
-                <li><h5>Blog Slider</h5>
-                    <p>This slider links to all home related articles published at Jumbo Moda Blog</p>
-                </li>
-                <li><h5>Decor Tips</h5>
-                    <p>This slider links to all home related articles published at Jumbo Moda Blog</p>
-                </li>
-                <li><h5>Catalog Archive</h5>
-                    <p>Every campaign catalog is stored in this section where the user can always access older catalogs and campaigns</p>
-                </li>
-            </ul>
-            <div>
-                <figure>
-                    <img src="{{site.baseurl}}/assets/img/JumboHome04.png" alt="Sketching">
-                </figure>
-            </div>
+            <figure>
+                <img src="{{site.baseurl}}/assets/img/JumboHome04.png" alt="Sketching">
+            </figure>
         </div>
     </div>
 </section>
