--- a/_casestudies/davida.html
+++ b/_casestudies/davida.html
@@ -9,5 +9,5 @@ tools: "Figma, Balsamiq, Miro"
 featured-image: Featured_Davida.jpg
 featured-image-alt: "DáVida"
 description: "DáVida is the IPST (Portuguese Institute of Blood and transplantation) app that aims to motivate the youngest population to become blood donors."
-warning: I'm still working on this project. Follow me on social media to keep up with the progress.
+warning: I'm still working on this project. 
 ---
