--- a/_casestudies/cheery.html
+++ b/_casestudies/cheery.html
@@ -8,6 +8,6 @@ role: "Research, UX, UI, Business Planning"
 tools: "Figma, Balsamiq, Miro"
 featured-image: Featured_HappyDay.jpg
 featured-image-alt: "Cheery"
-description: "This app aims to simplify the management of everybodys birthdays. Helping you remember friend's birthdays and partys, manage your own events and organising group gifts."
+description: "A centralized hub that makes celebrating your favourite people a piece of cake. Always remember your friend's special days, send them a fun, heartfelted, congratulating message and easily organize a secret group gift."
 warning: I'm still working on this project.
 ---
